--- a/projectProperties.json
+++ b/projectProperties.json
@@ -256,7 +256,7 @@
     "category": "app",
     "chat": "false",
     "cloud_account_guid": "57e27988-dfbd-418d-ac06-4e26b74a1f64",
-    "cloud_env_GUID": "7073ead5-e272-4b7c-9aeb-0cdfe963bf08",
+    "cloud_env_GUID": null,
     "codeGeneration": "false",
     "contacts": "false",
     "cordovaModified": false,
@@ -267,7 +267,7 @@
     "defaultZIndex": "1",
     "defaultlocalekey": "",
     "defaulttheme": "defaultTheme",
-    "desktopstartupformkey": "fe66dcbc7f554879a1df672d011cee56",
+    "desktopstartupformkey": "a93adf925ce04807b922b8435c5e2f55",
     "desktopwebaligenmentoption": "left",
     "desktopwebbasefontsize": "16",
     "desktopwebfavico": "",
