--- a/forms/desktop/Dashboard/frmResetUser.sm/flxAcknowledgement.json
+++ b/forms/desktop/Dashboard/frmResetUser.sm/flxAcknowledgement.json
@@ -2,11 +2,11 @@
     "DNDConfig": null,
     "_height_": {
         "type": "string",
-        "value": "855px"
+        "value": "510px"
     },
     "_left_": {
         "type": "string",
-        "value": "350px"
+        "value": "0dp"
     },
     "_margin_": [
         0,
@@ -22,35 +22,43 @@
         0
     ],
     "_percent_": true,
-    "_skin_": "s74a7ddffc304aad9355acbe9aef0f3d",
+    "_skin_": "sf1072d106ac4203b651157b0c135e5e",
     "_top_": {
         "type": "string",
-        "value": "50dp"
+        "value": "0dp"
     },
     "_width_": {
         "type": "string",
-        "value": "1016px"
+        "value": "552px"
     },
     "allboxes": [],
     "autogrowmode": 0,
     "canUpdateUI": true,
+    "centerx": {
+        "type": "string",
+        "value": "51.73%"
+    },
+    "centery": {
+        "type": "string",
+        "value": "48.12%"
+    },
     "children": [
-        "flxTopContent",
-        "flxUserDetailsSection",
-        "flxConfirmationPopup",
-        "flxAcknowledgement"
+        "lblRetailPater1",
+        "flxLineSection",
+        "lblAcknowledgeMsg",
+        "flxBtn"
     ],
     "clipbounds": false,
     "containerweight": 100,
     "enablescrolling": true,
-    "id": "flxUserDetails",
+    "id": "flxAcknowledgement",
     "info": null,
     "iscustomlayout": false,
-    "isvisible": true,
-    "kuid": "b66ce6bbd4d34a05941b48fe0d395d78",
+    "isvisible": false,
+    "kuid": "c9de74b85a0b44c1a3188a26f0524b42",
     "layouttype": 2,
     "name": "kony.ui.FlexContainer",
-    "parent": "flxRightPane",
+    "parent": "flxUserDetails",
     "pf": "frmResetUser",
     "retaincontentalignment": false,
     "retainflexpositionproperties": false,
@@ -58,6 +66,5 @@
     "snapgridsize": 10,
     "snaptogrid": true,
     "wType": "FlexContainer",
-    "widgetalignment": 1,
-    "zindex": 1
+    "widgetalignment": 1
 }
