Modify user UI changes

--- a/projectProperties.json
+++ b/projectProperties.json
@@ -256,7 +256,7 @@
     "category": "app",
     "chat": "false",
     "cloud_account_guid": "b719c42f-778e-465c-a5cf-94c45f7b09fe",
-    "cloud_env_GUID": "855066ff-4cb1-416f-8dd7-f1041ed25ef0",
+    "cloud_env_GUID": null,
     "codeGeneration": "false",
     "contacts": "false",
     "cordovaModified": false,
@@ -267,7 +267,7 @@
     "defaultZIndex": "1",
     "defaultlocalekey": "",
     "defaulttheme": "defaultTheme",
-    "desktopstartupformkey": "a93adf925ce04807b922b8435c5e2f55",
+    "desktopstartupformkey": "d97569eb7d65476ea8e26fc5c2ad6002",
     "desktopwebaligenmentoption": "left",
     "desktopwebbasefontsize": "16",
     "desktopwebfavico": "",
