Retailer API implementation

--- a/projectProperties.json
+++ b/projectProperties.json
@@ -51,6 +51,7 @@
     "access_pimdomain_messages": "false",
     "access_shared": "false",
     "access_sms_mms": "false",
+    "adaptivewebmanifestjson": "",
     "allJoyn": "false",
     "allowselfsignedcertificate": "false",
     "andmaxsdkkey": "None",
@@ -256,10 +257,13 @@
     "category": "app",
     "chat": "false",
     "cloud_account_guid": "54b81c51-50d8-4bbd-9a7b-888d2511c518",
-    "cloud_env_GUID": null,
+    "cloud_env_GUID": "50a093a6-b9eb-4916-a42a-5893cc5f9972",
     "codeGeneration": "false",
     "contacts": "false",
     "cordovaModified": false,
+    "cordovaVersionInfo": {
+        "useGlobalCordova": false
+    },
     "createdVizVersion": "9.5.10",
     "createdgaversion": "9.5.10",
     "currentgaversion": "9.5.10",
@@ -267,7 +271,7 @@
     "defaultZIndex": "1",
     "defaultlocalekey": "",
     "defaulttheme": "defaultTheme",
-    "desktopstartupformkey": "gc9f620731df4ac3b93400923c4dfa95",
+    "desktopstartupformkey": "fe66dcbc7f554879a1df672d011cee56",
     "desktopwebaligenmentoption": "left",
     "desktopwebbasefontsize": "16",
     "desktopwebfavico": "",
@@ -290,6 +294,11 @@
     "enableProgressiveWeb": false,
     "enablePushNotificationsDW": false,
     "enableResponsive": true,
+    "enableServiceWorker": false,
+    "enableServiceWorkerHelper": false,
+    "enableViewportZooming": false,
+    "enableWindowsOfflineObjectsForWebApp": false,
+    "enableWindowsRuntimeForWebApp": false,
     "enableactionbar": false,
     "enableasyncdesktopweb": true,
     "enableasyncspa": true,
@@ -307,10 +316,13 @@
     "enablexfsdw": false,
     "enablexfsspa": false,
     "enterpriseAuthentication": "false",
+    "es5build": false,
     "exceptionalert": "true",
     "extendBottom": "false",
     "extendTop": "false",
+    "fabric_runtime_app_version": "Linked",
     "fbxfolderpathkey": "",
+    "fcmsenderid": "",
     "fgcolorkey": "255,255,255",
     "generateJavaCodeForForms": "false",
     "genericexceptionalert": "false",
@@ -319,6 +331,8 @@
     "hiddenAppGroups": {},
     "hostkey": "",
     "hostkey_andwear": "",
+    "htmlheadscripttagsdesktopweb": "",
+    "htmlheadscripttagsspa": "",
     "hybdridcontextkey": "",
     "hybridaddrkey": "",
     "hybridhttpsportkey": "",
@@ -365,10 +379,13 @@
     "iphonewebshrtcutkey": "",
     "isA11yConfigEnabled": false,
     "isDpScaleFactor": true,
+    "isEASAppUpgradable": false,
     "isI18nConfigEnabled": false,
+    "isI18nLayoutConfigEnabled": false,
     "isMVC": true,
     "isNewAppWithRespectToAndroidPackageName": "true",
     "isNewAppWithRespectToAndroidWearPackageName": "true",
+    "isScreenShotDisabledForTestReports": false,
     "keyAlias": "",
     "keyAliasandwear": "",
     "keyStoreFilePath": "",
@@ -387,6 +404,7 @@
     "mangoapptitlekey": ",,,,,,",
     "mapkey": "",
     "marginsincludedinwidgetcontainerweight": "true",
+    "metatags": "",
     "microphone": "false",
     "musicLibrary": "false",
     "mwaddrkey": "",
@@ -654,6 +672,7 @@
     "protectedmodeenabled_android": "false",
     "protectedmodeenabled_androidwear": "false",
     "protectedmodeenabled_ios": "false",
+    "prototype": {},
     "proximity": "false",
     "readOnly": [],
     "read_device_identifying_information": "false",
@@ -670,10 +689,14 @@
     "schemekey": "",
     "schemekey_andwear": "",
     "secondarytilefunctionkey": "None",
+    "seoconfigfilepath": "",
+    "serviceworkerfile": "",
+    "serviceworkerhelperfile": "",
     "sessionmanager": "Http Session Manager",
     "settings_gradle_attrs": "",
     "settings_gradle_attrs_andwear": "",
     "sharedUserCertificates": "false",
+    "sitemapxmlpath": "",
     "spaandroidtab1024basefontsize": "16",
     "spaandroidtab1280basefontsize": "18",
     "spaandroidtab800basefontsize": "14",
@@ -760,6 +783,7 @@
     "wap_spaandroidtabhdpi_fontsize": "18",
     "wap_spaandroidtabldpi_fontsize": "14",
     "wap_spaandroidtabmdpi_fontsize": "16",
+    "wap_spaandroidtabxhdpi_fontsize": "18",
     "wap_spaipad_fontsize": "17",
     "wap_spawindowstab_fontsize": "17",
     "wap_winphone320_fontsize": "12",
