--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/txtApplicantAddress.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/txtApplicantAddress.json
@@ -21,7 +21,7 @@
         0,
         0
     ],
-    "_placeholder_": "example@mail.com",
+    "_placeholder_": "saudi arabia",
     "_skin_": "s037010f8dd34e8ebb4eb637106fda93",
     "_text_": "saudi arabia",
     "_top_": {
