--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/CopyflxApplicantID0eb23bb151de44e.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/CopyflxApplicantID0eb23bb151de44e.json
@@ -35,21 +35,21 @@
     "autogrowmode": 0,
     "canUpdateUI": true,
     "children": [
-        "CopylblUsername0d7cd8edd184b4c",
-        "txtUserId"
+        "CopylblApplicantID0a30f846e542044",
+        "txtGenerateDate"
     ],
     "clipbounds": false,
     "containerweight": 100,
     "enablescrolling": true,
-    "id": "CopyflxUsername0e27727ade06142",
+    "id": "CopyflxApplicantID0eb23bb151de44e",
     "info": null,
     "iscustomlayout": false,
-    "isvisible": false,
-    "kuid": "fbae1facb6604385a7228815806598f5",
+    "isvisible": true,
+    "kuid": "bdc5e9ef2f1245428ed2418196b5c6f5",
     "layouttype": 4,
     "name": "kony.ui.FlexContainer",
-    "parent": "flxuserid",
-    "pf": "frmCreateNewUser",
+    "parent": "flxLine21",
+    "pf": "frmRedeemVoucher",
     "retaincontentalignment": false,
     "retainflexpositionproperties": false,
     "retainflowhorizontalalignment": false,
