--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/CopyflxApplicantAddress0bb6bfb90747645.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/CopyflxApplicantAddress0bb6bfb90747645.json
@@ -4,10 +4,6 @@
         "type": "string",
         "value": "70px"
     },
-    "_left_": {
-        "type": "string",
-        "value": "5%"
-    },
     "_margin_": [
         0,
         0,
@@ -22,6 +18,10 @@
         0
     ],
     "_percent_": true,
+    "_right_": {
+        "type": "string",
+        "value": "0px"
+    },
     "_skin_": "sa6c95d6a2de43559d647c787411cd1e",
     "_top_": {
         "type": "string",
@@ -35,21 +35,21 @@
     "autogrowmode": 0,
     "canUpdateUI": true,
     "children": [
-        "CopylblUsername0d7cd8edd184b4c",
-        "txtUserId"
+        "lblExpiryDate",
+        "txtExpiryDate"
     ],
     "clipbounds": false,
     "containerweight": 100,
     "enablescrolling": true,
-    "id": "CopyflxUsername0e27727ade06142",
+    "id": "CopyflxApplicantAddress0bb6bfb90747645",
     "info": null,
     "iscustomlayout": false,
-    "isvisible": false,
-    "kuid": "fbae1facb6604385a7228815806598f5",
+    "isvisible": true,
+    "kuid": "bf4ac48d429440ab94a92127ad43e8d2",
     "layouttype": 4,
     "name": "kony.ui.FlexContainer",
-    "parent": "flxuserid",
-    "pf": "frmCreateNewUser",
+    "parent": "flxLine21",
+    "pf": "frmRedeemVoucher",
     "retaincontentalignment": false,
     "retainflexpositionproperties": false,
     "retainflowhorizontalalignment": false,
