--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/CopylblApplicantID0a30f846e542044.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/CopylblApplicantID0a30f846e542044.json
@@ -7,7 +7,7 @@
     },
     "_left_": {
         "type": "string",
-        "value": "30px"
+        "value": "0"
     },
     "_margin_": [
         1,
@@ -21,15 +21,15 @@
         0,
         0
     ],
-    "_skin_": "s0fd648e1db34d9da252d47339c154ea",
-    "_text_": "ABC1152212334212",
+    "_skin_": "s447b2567fad4284870872898e050475",
+    "_text_": "Generation Date",
     "_top_": {
         "type": "string",
-        "value": "90px"
+        "value": "0dp"
     },
     "_width_": {
         "type": "string",
-        "value": "80%"
+        "value": "200px"
     },
     "_wrapping_": 2,
     "android": {
@@ -41,7 +41,7 @@
     "canUpdateUI": true,
     "containerweight": 100,
     "contentalignment": 4,
-    "id": "lblVoucherID",
+    "id": "CopylblApplicantID0a30f846e542044",
     "info": null,
     "ipad": {
         "psp": {
@@ -54,10 +54,10 @@
         }
     },
     "iscustomlayout": false,
-    "isvisible": false,
-    "kuid": "f292bdbbca0f4ac1afd4371a1bb94233",
+    "isvisible": true,
+    "kuid": "c77d4a88ca4944ff808923f361e7c5e1",
     "name": "kony.ui.Label",
-    "parent": "flxTopContent",
+    "parent": "CopyflxApplicantID0eb23bb151de44e",
     "pf": "frmRedeemVoucher",
     "retaincontentalignment": false,
     "retainflexpositionproperties": false,
