--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/flxApplicantAddress.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/flxApplicantAddress.json
@@ -36,7 +36,7 @@
     "canUpdateUI": true,
     "children": [
         "lblApplicantAddress",
-        "txtApplicantAddress"
+        "txtVoucherStatus"
     ],
     "clipbounds": false,
     "containerweight": 100,
