--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/flxApplicantID.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/flxApplicantID.json
@@ -36,7 +36,7 @@
     "canUpdateUI": true,
     "children": [
         "lblApplicantID",
-        "txtApplicantID"
+        "txtVoucherNumber"
     ],
     "clipbounds": false,
     "containerweight": 100,
