--- a/forms/desktop/Dashboard/frmRedeemVoucher.sm/flxAcknowledgementPopup.json
+++ b/forms/desktop/Dashboard/frmRedeemVoucher.sm/flxAcknowledgementPopup.json
@@ -54,11 +54,11 @@
     "id": "flxAcknowledgementPopup",
     "info": null,
     "iscustomlayout": false,
-    "isvisible": false,
+    "isvisible": true,
     "kuid": "d37ca21f8be54f38ae03045c6e499990",
     "layouttype": 2,
     "name": "kony.ui.FlexContainer",
-    "parent": "flxVoucherDetails",
+    "parent": "flxRightPane",
     "pf": "frmRedeemVoucher",
     "retaincontentalignment": false,
     "retainflexpositionproperties": false,
